made some changes

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@
     transform: rotate(360deg);
   }
 }
+
+@media (max-width: 667px){
+  .App{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
