--- a/src/components/direction-meter/directionMeter.css
+++ b/src/components/direction-meter/directionMeter.css
@@ -1,7 +1,7 @@
 .direction-meter {
     position: relative;
-    width: 180px;
-    height: 180px;
+    width: 25vh;
+    height: 25vh;
     border-radius: 50%;
     background-color: #2d2b4d;
     border: 8px solid #ffffff;
@@ -14,8 +14,8 @@
 .direction-meter::before {
     content: '';
     position: absolute;
-    width: 160px;
-    height: 160px;
+    width: 23vh;
+    height: 23vh;
     border-radius: 50%;
     background-color: #2d2b4d;
     border: 2px solid #ffffff;
@@ -83,3 +83,26 @@
     top: 50%;
     transform: translateY(-50%);
 }
+
+
+@media (max-width: 667px){
+    .direction-meter {
+        width: 110px;
+        height: 110px;
+        border: 4px solid #ffffff;
+    }
+    .direction-meter::before {
+        width: 100px;
+        height: 100px;
+    }
+    .needle {
+        position: absolute;
+        width: 6px;
+        height: 50px;
+        left: 48%;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 1%;
+        background-color: red;
+        z-index: 2;
+    }
+  }
