--- a/src/components/humidity/Humadity.css
+++ b/src/components/humidity/Humadity.css
@@ -36,3 +36,14 @@
     font-size: 2rem;
     font-weight: 700;
 }
+
+@media (max-width: 667px){
+    .humadity-container {
+        width: 120px;
+        height: 120px;
+    }
+    .progress-value{
+        font-size: 1.7rem;
+        font-weight: 400;
+    }
+  }
